k8s/gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ms-gateway
  namespace: ms-gateway
spec:
  # gatewayClassName: nginx
  gatewayClassName: envoy
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
        
    # hostname: "*.example.com"
  # - name: http-8080
  #   port: 8080
  #   protocol: HTTP
