k8s/gateway/base/argocd-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: ms-gateway
    namespace: ms-gateway

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd

    backendRefs:
    - name: argocd-server
      port: 443
