k8s/gateway/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms-http-route
  namespace: ms-ecom
spec:
  parentRefs:
  - name: ms-gateway
    namespace: ms-gateway

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 5173

  # '/api/' should be placed before '/'.
  # '/' is a catch-all (matches everything), so specific routes must come first
  # to avoid incorrect routing.

  - matches:
    - path:
        type: PathPrefix
        value: /api/
    backendRefs:
    - name: userservice-service
      port: 8000

  - matches:
    - path:
        type: PathPrefix
        value: /api/products
    backendRefs:
    - name: productservice-service
      port: 3001

  - matches:
    - path:
        type: PathPrefix
        value: /api/orders
    backendRefs:
    - name: orderservice-service
      port: 8082
